# goit_hw_pyweb_2

./: Dockerfile  README.md  __main__.py  clsCommand.py  clsNavigation.py  clsSecurity.py  clsValidInfo.py  pyproject.toml
app/: __main__.py  clsSecurity.py
data/: report.txt
materials/: command_docker.txt  command_poetry.txt
