[tool.poetry]
name = "iplugin"
version = "0.1.0"
description = "Personal assistant"
authors = ["iPlugin <real.andreychuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.1"
prettytable = "3.6.0"
tqdm = "4.64.1"
rich = "13.3.1"


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.1.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
